<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string_notif_dialog"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/notification_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_margin="16dp"
        android:layout_below="@id/notification_title"
        android:text="@string/notif_desc"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notify_okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notif_okay_button"
        android:layout_margin="16dp"
        android:layout_below="@id/notification_description"
        android:layout_alignParentEnd="true" />


</RelativeLayout>