<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/upload_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        style="@style/SpinKitView.Circle"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:SpinKit_Color="@color/primaryColor"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/upload_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_string_upload_dialog"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/upload_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/upload_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="4dp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/upload_chosen_file"/>

    <TextView
        android:id="@+id/upload_file_filename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/upload_filename"
        android:layout_below="@id/upload_title"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textColor="#000000"
        android:maxLines="1"
        android:ellipsize="end" />

    <EditText
        android:id="@+id/upload_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_create_dialog"
        android:textCursorDrawable="@null"
        android:inputType="text"
        android:maxLength="20"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:layout_below="@id/upload_filename" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_upload_dialog"
        android:layout_margin="16dp"
        android:layout_below="@id/upload_name"
        android:layout_alignParentEnd="true" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#000000"
        android:layout_below="@id/upload_name"
        android:layout_toStartOf="@id/upload_button"
        android:text="@string/cancel_create_dialog"/>

</RelativeLayout>